--- a/package.json
+++ b/package.json
@@ -10,9 +10,25 @@
   },
   "dependencies": {
     "@tinymce/tinymce-react": "^6.0.0",
+    "@tiptap/core": "^2.11.5",
+    "@tiptap/extension-bullet-list": "^2.11.5",
+    "@tiptap/extension-image": "^2.11.5",
+    "@tiptap/extension-list-item": "^2.11.5",
+    "@tiptap/extension-text-style": "^2.11.5",
+    "@tiptap/extension-underline": "^2.11.5",
+    "@tiptap/react": "^2.11.5",
+    "@tiptap/starter-kit": "^2.11.5",
+    "@types/styled-components": "^5.1.34",
+    "axios": "^1.8.1",
     "next": "15.1.7",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-hook-form": "^7.54.2",
+    "react-icons": "^5.5.0",
+    "scss": "^0.2.4",
+    "styled-components": "^6.1.15",
+    "tiptap": "^1.32.2",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -22,5 +38,11 @@
     "eslint": "^9",
     "eslint-config-next": "15.1.7",
     "typescript": "^5"
+  },
+  "overrides": {
+    "@tinymce/tinymce-react": {
+      "react": "$react",
+      "react-dom": "$react-dom"
+    }
   }
 }
